--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.mobilechallenge">
+          xmlns:tools="http://schemas.android.com/tools" package="com.rickandmorty">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-            android:name="com.mobilechallenge.App"
+            android:name="com.rickandmorty.App"
             android:allowBackup="true"
             android:fullBackupContent="true"
-            android:icon="@drawable/app_icon"
+            android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@drawable/app_icon_round"
+            android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
 
 
-        <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyBckUZU2E7j0ybySIxZvxL_zIzjlf2lRQY"/>
-        <meta-data
-                android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version"/>
-
         <activity
-                android:name="com.mobilechallenge.scenes.onboarding.splash.SplashActivity"
+                android:name="com.rickandmorty.ui.splash.SplashActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar.FullScreen">
@@ -42,11 +35,7 @@
                 android:required="false"/>
 
         <activity
-                android:name="com.mobilechallenge.scenes.authentication.AuthenticationActivity"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar"/>
-        <activity
-                android:name="com.mobilechallenge.scenes.onboarding.splash.OnboardingActivity"
+                android:name="com.rickandmorty.ui.MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar"/>
     </application>
