--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -4,6 +4,7 @@ def addRepos(RepositoryHandler handler) {
     handler.mavenCentral()
     handler.maven { url "https://jitpack.io" }
     handler.maven { url "https://kotlin.bintray.com/kotlinx" }
+    handler.maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     handler.google()
 }
 ext.addRepos = this.&addRepos
@@ -19,7 +20,7 @@ def versions = [:]
 //Google
 versions.support = "1.0.0"
 versions.supportv4 = "1.0.0-beta01"
-versions.support_livedata = "2.0.0"
+versions.support_livedata = "2.2.0-alpha01"
 versions.support_work = "1.0.0-rc01"
 versions.material = "1.0.0"
 versions.multidex = "2.0.0"
@@ -28,12 +29,14 @@ versions.constraint_layout = "1.1.2"
 versions.dagger = "2.21"
 versions.gson = "2.7"
 versions.coordinator = "1.0.0"
+versions.core_testing = "2.1.0"
 
 //Kotlin
 versions.kotlin = "1.3.21"
 versions.rx_kotlin = "2.3.0"
 versions.anko = "0.10.8"
 versions.serialization_runtime = "0.10.0"
+versions.coroutines = "1.3.2"
 
 //Third party libraries
 versions.rxjava2 = "2.2.4"
@@ -41,6 +44,7 @@ versions.rx_android = "2.1.0"
 versions.rx_location = "1.0.5"
 versions.rx_binding = "3.0.0-alpha1"
 versions.retrofit = "2.5.0"
+versions.retrofit_SNAPSHOT = "2.5.1-SNAPSHOT"
 versions.ok_http = "3.12.0"
 versions.mockwebserver = versions.ok_http
 versions.realm = "5.9.0"
@@ -58,6 +62,7 @@ versions.javax_annotation = "1.0"
 versions.javax_inject = "1"
 versions.timber = "4.7.1"
 versions.kotlinx_converter = "0.2.0"
+versions.rxreactivenetwork = "3.0.2"
 
 //Unit Testing
 versions.robolectric = '4.0.2'
@@ -104,10 +109,14 @@ lifecycle.extensions = "androidx.lifecycle:lifecycle-extensions:$versions.suppor
 lifecycle.reactive = "androidx.lifecycle:lifecycle-reactivestreams:$versions.support_livedata"
 lifecycle.java8 = "androidx.lifecycle:lifecycle-common-java8$versions.support_livedata"
 lifecycle.compiler = "androidx.lifecycle:lifecycle-compiler:$versions.support_livedata"
+
+lifecycle.viewmodel = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.support_livedata"
+lifecycle.livedata = "androidx.lifecycle:lifecycle-livedata-ktx:$versions.support_livedata"
+lifecycle.runtimektx = "androidx.lifecycle:lifecycle-runtime-ktx:$versions.support_livedata"
 deps.lifecycle = lifecycle
 
 def arch_core = [:]
-arch_core.testing = "androidx.arch.core:core-testing:$versions.support_livedata"
+arch_core.testing = "androidx.arch.core:core-testing:$versions.core_testing"
 deps.arch_core = arch_core
 
 def retrofit = [:]
@@ -117,6 +126,8 @@ retrofit.rx = "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
 retrofit.loggin_interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.ok_http"
 retrofit.mock = "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
 retrofit.kotlinx = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:$versions.kotlinx_converter"
+retrofit.snapshot = "com.squareup.retrofit2:retrofit:$versions.retrofit_SNAPSHOT"
+retrofit.moshi = "com.squareup.retrofit2:converter-moshi:$versions.retrofit_SNAPSHOT"
 deps.retrofit = retrofit
 
 def dagger = [:]
@@ -157,6 +168,9 @@ kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
 kotlin.rx = "io.reactivex.rxjava2:rxkotlin:$versions.rx_kotlin"
 kotlin.extensions = "org.jetbrains.kotlin:kotlin-android-extensions:$versions.kotlin"
 kotlin.databinding = "com.android.databinding:compiler:$versions.android_gradle_plugin"
+kotlin.coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines"
+kotlin.coroutines_android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines"
+kotlin.coroutines_test = "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutines"
 deps.kotlin = kotlin
 
 def anko = [:]
@@ -194,4 +208,6 @@ deps.javaxInject = "javax.inject:javax.inject:$versions.javax_inject"
 deps.timber = "com.jakewharton.timber:timber:$versions.timber"
 deps.navigation = "android.arch.navigation:navigation-ui-ktx:$versions.navigation"
 deps.navigation_fragment = "android.arch.navigation:navigation-fragment-ktx:$versions.navigation"
+deps.rx_reactivenetwork = "com.github.pwittchen:reactivenetwork-rx2:$versions.rxreactivenetwork"
+
 ext.deps = deps
