--- a/gradle.properties
+++ b/gradle.properties
@@ -20,14 +20,10 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-DEBUG_PASSWORD =        Mobile-Challenge
-DEBUG_KEY_ALIAS =       key0
-DEBUG_KEY_PASSWORD =    Mobile-Challenge
-
-STAGING_PASSWORD =      Mobile-Challenge
+STAGING_PASSWORD =      Rick-Morty
 STAGING_KEY_ALIAS =     key0
-STAGING_KEY_PASSWORD =  Mobile-Challenge
+STAGING_KEY_PASSWORD =  Rick-Morty
 
-RELEASE_PASSWORD =      Mobile-Challenge
+RELEASE_PASSWORD =      Rick-Morty
 RELEASE_KEY_ALIAS =     key0
-RELEASE_KEY_PASSWORD =  Mobile-Challenge
+RELEASE_KEY_PASSWORD =  Rick-Morty
