--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -68,6 +68,10 @@ dependencies {
     implementation deps.kotlin.stdlib
     implementation deps.kotlin.rx
 
+    //Kotlin Coroutines
+    implementation deps.kotlin.coroutines
+    implementation deps.kotlin.coroutines_android
+
     // Dagger
     implementation deps.dagger.runtime
     implementation deps.dagger.android
